--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,5 +1,5 @@
 <footer class="bg-primary text-white mt-5">
   <div class="container py-3 text-center small">
-    © {{ now|date:"Y" }} My Market ERP — Built with Django
+    © {{ now|date:"Y" }} My Market ERP — Built with Django by Shaxzodbek
   </div>
 </footer>
